maybe fix social Refs on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -58,6 +58,9 @@ $on-laptop:        800px;
         float:none;
         margin:0 auto 20px !important;
     }
+    .social-refs a {
+        margin: 4px 10px !important;
+    }
 }
 
 html, body, .page-content, .wrapper {
